2007-01-16  Tor Lillqvist  <tml@novell.com>

	* glib/gthread.c (gettime): GetSystemTimeAsFileTime() returns 100s
	of nanoseconds since 1601, so offset to Unix epoch (1970) and
	multiply by 100 to get nanoseconds which is what we want.

2007-01-15  Tor Lillqvist  <tml@novell.com>

	* glib/gmain.h (struct _GPollFD): Fix mistake in my last commit.

2005-01-15  Matthias Clasen  <mclasen@redhat.com>

	* glib/giochannel.c:
	* glib/gbookmarkfile.c: Remove redundant NULL-checks.
	(#369668, Morten Welinder)

2005-01-15  Matthias Clasen  <mclasen@redhat.com>

	* glib/gthread.c:
	* gthread/gthread-posix.c: Correct the gettime calculations
	once more.  (#395203, Chris Wilson)

2007-01-15  Tor Lillqvist  <tml@novell.com>

	* glib/gmain.h (struct _GPollFD): Prepare for potential Win64
	build: Use gint64 for the fd field on Win64, as we want to be able
	to store a HANDLE in it. (#395422) (Other changes will surely also
	be necessary when building on Win64, at least in giowin32.c.)

2007-01-15  Tor Lillqvist  <tml@novell.com>

	* glib/gwin32.c (g_win32_getlocale): Simplify greatly. Instead of
	hardcoding a large switch statement, just ask Windows for the
	ISO639 and ISO3166 codes. Tack on @Latn or @Cyrl for those
	languages which can alternatively be written in Latin or
	Cyrillic. Fixes #395419.

2007-01-12  Matthias Clasen  <mclasen@redhat.com>

	* glib/gkeyfile.c: Rework the handling of invalid
	keys/groups again. We are back to being liberal about
	what we accept, and only reject things that would lead
	to non-rereadable keyfiles.

	* tests/keyfile-test.c: Adapt tests.

2007-01-12  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.c (g_get_home_dir): Clarify docs.  (#394687,
	Marc Brockschmidt)

2007-01-12  Matthias Clasen  <mclasen@redhat.com>

	* glib/gthread.c: Include windows.h and fix
	include order. (#394258, Kazuki Iwamoto)

2007-01-12  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Make G_GNUC_INTERNAL a no-op for