@@ -1127,6 +1127,7 @@ g_thread_init_glib
 g_thread_functions_for_glib_use
 g_threads_got_initialized
 g_thread_use_default_impl
+g_thread_gettime
 #endif
 g_thread_create_full
 g_thread_error_quark
