@@ -546,7 +546,7 @@ g_thread_join_win32_impl (gpointer thread)
 }
 
 static guint64
-g_gettime_win32_impl (void)
+g_thread_gettime_impl (void)
 {
   guint64 v;
 
@@ -583,8 +583,7 @@ static GThreadFunctions g_thread_functions_for_glib_use_default =
   g_thread_exit_win32_impl,
   g_thread_set_priority_win32_impl,
   g_thread_self_win32_impl,
-  NULL,                             /* no equal function necessary */
-  g_gettime_win32_impl
+  NULL                             /* no equal function necessary */
 };
 
 #define HAVE_G_THREAD_IMPL_INIT
